--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Muhammad Nur Wahid",
-            "email": "codeofdeadly@gmail.com"
+            "email": "neo.reids@gmail.com"
         }
     ],
     "minimum-stability": "stable",
